<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:gravity="bottom"
        android:padding="10dp"
        android:shrinkColumns="3"
        android:theme="@style/Animation.Design.BottomSheetDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/RowOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <EditText
                android:id="@+id/et_displayTotal"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="4"
                android:autofillHints=""
                android:backgroundTint="#918F8F"
                android:ems="10"
                android:inputType="textPersonName"
                android:labelFor="@id/et_displayTotal"
                android:text="@string/et_displayTotal"
                android:textAlignment="textEnd"
                android:textColor="#757575"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/RowTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <TextView
                android:id="@+id/tv_appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_span="1"
                android:gravity="end"
                android:text="@string/tv_appName" />
        </TableRow>

        <TableRow
            android:id="@+id/RowThree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <Button
                android:id="@+id/btn_clear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/purple_200"
                android:text="@string/btn_clear"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/purple_200"
                android:text="@string/btn_delete"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_posAndNeg"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/purple_200"
                android:text="@string/btn_posAndNeg"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_divide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/purple_200"
                android:text="@string/btn_divide"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/RowFour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <Button
                android:id="@+id/btn_seven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/design_default_color_secondary_variant"
                android:text="@string/btn_seven"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_eight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/design_default_color_secondary_variant"
                android:text="@string/btn_eight"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_nine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/design_default_color_secondary_variant"
                android:text="@string/btn_nine"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_multiply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/purple_200"
                android:text="@string/btn_multiply"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/RowFive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <Button
                android:id="@+id/btn_four"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/design_default_color_secondary_variant"
                android:text="@string/btn_four"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_five"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/design_default_color_secondary_variant"
                android:text="@string/btn_five"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_six"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/design_default_color_secondary_variant"
                android:text="@string/btn_six"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_subtract"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/purple_200"
                android:text="@string/btn_subtract"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/RowSix"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <Button
                android:id="@+id/btn_one"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/design_default_color_secondary_variant"
                android:text="@string/btn_one"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_two"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/design_default_color_secondary_variant"
                android:text="@string/btn_two"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_three"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/design_default_color_secondary_variant"
                android:text="@string/btn_three"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_add"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/purple_200"
                android:text="@string/btn_add"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/RowSeven"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <Button
                android:id="@+id/btn_zero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="2"
                android:background="@color/design_default_color_secondary_variant"
                android:text="@string/btn_zero"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_decimal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/purple_200"
                android:text="@string/btn_decimal"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_evaluate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_span="1"
                android:background="@color/purple_200"
                android:text="@string/btn_evaluate"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>